--- a/videoinfo/package.json
+++ b/videoinfo/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "electron": "^20.2.0"
+    "electron": "^20.2.0",
+    "fluent-ffmpeg": "^2.1.2"
   },
   "devDependencies": {},
   "scripts": {
